<resources>
    <string name="app_name" translatable="false">Shizuku</string>
    <string name="translation_contributors" />
    <string name="home_status_service_is_running">%1$s is running</string>
    <string name="home_status_service_not_running">%1$s is not running</string>
    <string name="home_status_service_version">Version %2$s, %1$s</string>
    <string name="home_status_service_version_update"><![CDATA[Version %2$s, %1$s<br>Start again to update to version %3$s]]></string>
    <string name="home_adb_title"><![CDATA[Start by connecting to a computer]]></string>
    <string name="home_adb_description"><![CDATA[For devices without root, you need to use adb to start Shizuku (requires computer connection). This process needs to be repeated every time the device is restarted. Please <b><a href=\"%1$s\">read the help</a></b>.]]></string>
    <string name="home_adb_button_view_help">Read help</string>
    <string name="home_adb_button_view_command">View command</string>
    <string name="home_adb_dialog_view_command_message"><![CDATA[<font face="monospace">%1$s</font><br><br>* There are some other considerations, please confirm that you have read the help first.]]></string>
    <string name="home_adb_dialog_view_command_copy_button">Copy</string>
    <string name="home_adb_dialog_view_command_button_send">Send</string>
    <string name="home_wireless_adb_title"><![CDATA[Start via Wireless debugging]]></string>
    <string name="home_wireless_adb_description"><![CDATA[On Android 11 or above, you can enable Wireless debugging and start Shizuku directly from your device, without connecting to a computer.<p>Please view the step-by-step guide first.]]></string>
    <string name="home_wireless_adb_description_pre_11"><![CDATA[Before Android 11, connecting to a computer is required to enable Wireless debugging.]]></string>
    <string name="home_wireless_adb_view_guide_button">Step-by-step guide</string>
    <string name="dialog_adb_discovery">Searching for wireless debugging service</string>
    <string name="dialog_adb_discovery_message">Please enable \"Wireless debugging\" in \"Developer options\". \"Wireless debugging\" is automatically disabled when network changes.\n\nNote, do not disable \"Developer options\" or \"USB debugging\", or Shizuku will be stopped.</string>
    <string name="dialog_adb_discovery_message_toggle_wireless_debugging">Please try to disable and enable \"Wireless debugging\" if it keeps searching.</string>
    <string name="dialog_adb_port">Port</string>
    <string name="dialog_adb_invalid_port">Port is an integer ranging from 1 to 65535.</string>
    <string name="adb_pairing">Pairing</string>
    <string name="dialog_adb_pairing_title">Pair with device</string>
    <string name="dialog_adb_pairing_discovery">Searching for pairing service</string>
    <string name="dialog_adb_pairing_paring_code">Pairing code</string>
    <string name="paring_code_is_wrong">Pairing code is wrong.</string>
    <string name="cannot_connect_port">Can\'t connect to wireless debugging service.\n\nPlease ensure that Shizuku is whitelisted in all firewall, ad-block, VPN, or similar apps that can restrict network access.</string>
    <string name="dialog_wireless_adb_not_enabled">Wireless debugging is not enabled.\nNote, before Android 11, to enable wireless debugging, computer connection is a must.</string>
    <string name="dialog_usb_debugging_not_enabled">USB debugging is not enabled.\nPlease enable it in \"Developer Options\".</string>
    <string name="dialog_adb_pairing_message">Please start pairing by performing the following steps:\n- Navigate to \"Developer Options\"\n- Enable \"USB debugging\" and \"Wireless debugging\"\n- Tap the left side of \"Wireless debugging\"\n- Tap \"Pair device with pairing code\"\n- Input the pairing code in the notification</string>
    <string name="dialog_adb_pairing_accessibility_permission">On Android 14, installing/updating Shizuku with the Package Installer revokes the ^1 permission, which is required to enable the accessibility service for pairing.\n\nTo grant it, run the following ADB command:\n\n^2\n\nAfter running the command, you may continue with the pairing process.\n\nNote: you can bypass this by installing/updating Shizuku with ADB.</string>
    <string name="dialog_adb_pairing_accessibility_enable">Please enable the accessibility service to start the pairing process. This allows Shizuku to detect the pairing code.\n\nThe accessibility service will be turned off when the code is found or after 1 minute to save energy.</string>
    <string name="dialog_adb_pairing_accessibility_navigate">Please start pairing by performing the following steps:\n- Navigate to \"Developer Options\"\n- Enable \"USB debugging\" and \"Wireless debugging\"\n- Tap the left side of \"Wireless debugging\"\n- Tap \"Pair device with pairing code.\" Shizuku will automatically detect the pairing code.</string>
    <string name="adb_pairing_requires_multi_window">Please enter split-screen (multi-window) mode first.</string>
    <string name="adb_pairing_requires_multi_window_reason">The system requires the pairing dialog to always be visible. Using split-screen mode is the only way to let this app and the system dialog be visible at the same time.</string>
    <string name="adb_error_key_store">Unable to generate key for wireless debugging.\nThis may be because the KeyStore mechanism of this device is broken.</string>
    <string name="adb_stopping_tcp">Closing TCP port</string>
    <string name="adb_error_stop_tcp">Failed to stop ADB over TCP</string>
    <string name="adb_pair_required">Please go through the pairing step first.</string>
    <string name="enable">Enable</string>
    <string name="development_settings">Developer options</string>
    <string name="notification_settings">Notification options</string>
    <string name="adb_pairing_tutorial_title">Pair Shizuku with your device</string>
    <string name="adb_pairing_tutorial_content_notification">A notification from Shizuku will help you complete the pairing.</string>
    <string name="adb_pairing_tutorial_content_steps">Navigate to \"Developer Options\", then enable \"USB debugging\" and \"Wireless debugging\".</string>
    <string name="adb_pairing_tutorial_content_enter_pairing_code">Tap the left side of \"Wireless debugging\", then tap \"Pair device with pairing code.\" Enter the code in the notification to complete pairing.</string>
    <string name="adb_pairing_tutorial_content_notification_blocked">The pairing process needs you to interact with a notification from Shizuku. Please allow Shizuku to post notifications.</string>
    <string name="adb_pairing_tutorial_content_miui">MIUI users may need to switch notification style to \"Android\" from \"Notification\" - \"Notification shade\" in system settings.</string>
    <string name="adb_pairing_tutorial_content_miui_2">Otherwise, you may not able to enter the pairing code from the notification.</string>
    <string name="adb_pairing_tutorial_content_finish">Go back to Shizuku and start Shizuku.</string>
    <string name="adb_pairing_tutorial_content_network">Shizuku needs to access the local network. It is controlled by the network permission.</string>
    <string name="adb_pairing_tutorial_content_network_limation_not_foreground">Some systems (such as MIUI) disallow apps to access the network when they are not visible, even if the app uses a foreground service. Please disable battery optimization features for Shizuku on such systems.</string>
    <string name="home_root_title"><![CDATA[Start (for rooted devices)]]></string>
    <string name="home_root_description"><![CDATA[If you are using Magisk, you can try %1$s. For root users, it will eventually replace Shizuku. Note, existing applications need to change a little to use %2$s.]]></string>
    <string name="home_root_button_start">Start</string>
    <string name="home_root_button_restart">Restart</string>
    <string name="home_app_management_title">Application management</string>
    <plurals name="home_app_management_authorized_apps_count">
        <item quantity="one"><![CDATA[Authorized %d application]]></item>
        <item quantity="other"><![CDATA[Authorized %d applications]]></item>
    </plurals>
    <string name="home_app_management_view_authorized_apps"><![CDATA[Tap to manage authorized apps]]></string>
    <string name="home_app_management_empty">Apps that have requested or declared the Shizuku permission will show here.</string>
    <string name="home_automation_title">Control Shizuku with automation apps</string>
    <string name="home_automation_description">Apps like Tasker and MacroDroid can send intents to start/stop Shizuku automatically.</string>
    <string name="home_automation_description_device_restriction">To use the start intent on your device, you first need to enable ADB over TCP by running %1$s from a PC.</string>
    <string name="home_automation_button_view_intents">View intents</string>
    <string name="home_automation_bottom_sheet_intents">Intents</string>
    <string name="home_automation_bottom_sheet_label_action">Action</string>
    <string name="home_automation_bottom_sheet_label_package">Package</string>
    <string name="home_automation_bottom_sheet_label_target">Target</string>
    <string name="home_automation_bottom_sheet_label_extras">Extras</string>
    <string name="home_automation_regenerate_token">Regenerate token?</string>
    <string name="home_automation_regenerate_token_message">You will need to reconfigure your intents with the new token.</string>
    <string name="home_stealth_title">Hide Shizuku from other apps</string>
    <string name="stealth_warning_compatibility">Some apps that use Shizuku may not work when Shizuku is hidden because they try to detect if Shizuku is installed.</string>
    <string name="stealth_warning_compatibility_2">As a workaround, you can temporarily unhide Shizuku, which installs a stub with the original package name. When you are finished, you can re-hide Shizuku.</string>
    <string name="stealth_warning_compatibility_3">Tap this card to copy a code snippet you can send to the developer so their \"Shizuku installed\" check will work when Shizuku is hidden.</string>
    <string name="stealth_warning_detection">Some apps may still be able to detect Shizuku even when hidden.</string>
    <string name="stealth_info_reconfigure">You will need to re-pair and re-configure Shizuku after installing the hidden version.</string>
    <string name="stealth_info_rish">Rish users: re-export the files after installing the hidden version.</string>
    <string name="stealth_info_intents">Intent users: update your intents with the new package name.</string>
    <string name="stealth_info_update">You must update Shizuku through the app when using the hidden version because it has a different signature.</string>
    <string name="stealth_package_name">Package name (optional)</string>
    <string name="settings_behavior">Behavior</string>
    <string name="settings_start_on_boot">Start on boot</string>
    <string name="settings_watchdog">Watchdog</string>
    <string name="settings_watchdog_summary">Automatically restart Shizuku if it crashes</string>
    <string name="settings_tcp_mode">TCP mode</string>
    <string name="settings_tcp_port">TCP port</string>
    <string name="settings_auto_disable_usb_debugging">Auto-disable USB debugging</string>
    <string name="settings_auto_disable_usb_debugging_summary">Disable USB debugging when stopping Shizuku</string>
    <string name="settings_language">Language</string>
    <string name="settings_user_interface">Appearance</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_legacy_pairing">Legacy pairing</string>
    <string name="settings_legacy_pairing_summary">Enter the pairing code in a dialog instead of a notification</string>
    <string name="check_for_updates">Check for updates</string>
</resources>