<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Empty preference to fix issue with Android TVs not being able to re-focus on appbar if
    category is first item -->
    <Preference
        android:key="empty"
        style="@style/Preference.Rikka.Material3.Empty" />

    <PreferenceCategory
        android:key="category_behavior"
        android:title="@string/settings_behavior">

        <SwitchPreferenceCompat
            android:key="start_on_boot"
            android:title="@string/settings_start_on_boot" />

        <SwitchPreferenceCompat
            android:key="watchdog"
            android:summary="@string/settings_watchdog_summary"
            android:title="@string/settings_watchdog" />

        <SwitchPreferenceCompat
            android:key="tcp_mode"
            android:title="@string/settings_tcp_mode"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="tcp_port"
            android:title="@string/settings_tcp_port"
            android:inputType="number"
            android:defaultValue="5555"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="auto_disable_usb_debugging"
            android:title="@string/settings_auto_disable_usb_debugging"
            android:summary="@string/settings_auto_disable_usb_debugging_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_ui"
        android:title="@string/settings_user_interface">

        <rikka.preference.SimpleMenuPreference
            android:defaultValue="SYSTEM"
            android:key="language"
            android:summary="%s"
            android:title="@string/settings_language" />

        <moe.shizuku.manager.settings.IntegerSimpleMenuPreference
            android:entries="@array/night_mode"
            android:entryValues="@array/night_mode_value"
            android:key="night_mode"
            android:summary="%s"
            android:title="@string/settings_theme" />

        <SwitchPreferenceCompat
            android:key="amoled_black"
            android:title="@string/settings_amoled_black" />

        <SwitchPreferenceCompat
            android:key="dynamic_color"
            android:title="@string/settings_dynamic_color"
            android:summary="@string/settings_dynamic_color_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_updates"
        android:title="@string/settings_updates">

        <SwitchPreferenceCompat
            android:key="check_for_updates"
            android:title="@string/check_for_updates"
            android:defaultValue="true" />

        <moe.shizuku.manager.settings.IntegerSimpleMenuPreference
            android:entries="@array/update_mode"
            android:entryValues="@array/update_mode_value"
            android:key="update_channel"
            android:summary="%s"
            android:title="@string/settings_update_channel" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_advanced"
        android:title="@string/settings_advanced">

        <SwitchPreferenceCompat
            android:key="legacy_pairing"
            android:summary="@string/settings_legacy_pairing_summary"
            android:title="@string/settings_legacy_pairing" />

    </PreferenceCategory>

</PreferenceScreen>