<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checkable="false"
    android:clickable="false"
    android:focusable="true"
    android:descendantFocusability="afterDescendants"
    app:cardBackgroundColor="?colorSurfaceContainerLow"
    app:cardCornerRadius="28dp"
    app:contentPadding="24dp">

    <LinearLayout
        style="@style/Card.Small">

        <ImageView
            android:id="@android:id/icon"
            style="@style/CardIcon"
            android:duplicateParentState="true"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_server_error_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_icon_padding"
            android:duplicateParentState="true"
            android:orientation="vertical">

            <TextView
                android:id="@android:id/title"
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:duplicateParentState="true" />

            <TextView
                android:id="@android:id/summary"
                style="@style/CardSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:duplicateParentState="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonViewCommand"
                    style="@style/CardButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_adb_button_view_command"
                    app:icon="@drawable/ic_code_24dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonPair"
                    style="@style/CardButton"
                    android:text="@string/adb_pairing"
                    app:icon="@drawable/ic_baseline_link_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonStart"
                    style="@style/CardButton"
                    android:text="@string/home_root_button_start"
                    app:icon="@drawable/ic_server_start_24dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>