<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:fitsSystemWindowsInsets="start|end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/packageNameContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_horizontal"
            android:paddingVertical="@dimen/margin_vertical"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/spacing_card_vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/DialogCard"
                android:id="@+id/compatibilityCard"
                app:cardBackgroundColor="?colorErrorContainer">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-8dp"
                    android:layout_marginTop="4dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_warning_24"
                    android:tint="?colorOnErrorContainer"
                    android:tintMode="src_in" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TerminalTutorialText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stealth_warning_compatibility"
                        android:textAppearance="?textAppearanceBodyMedium"
                        android:textColor="?colorOnErrorContainer"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TerminalTutorialText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/stealth_warning_compatibility_2"
                        android:textAppearance="?textAppearanceBodyMedium"
                        android:textColor="?colorOnErrorContainer" />

                    <TextView
                        style="@style/TerminalTutorialText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/stealth_warning_compatibility_3"
                        android:textAppearance="?textAppearanceBodyMedium"
                        android:textColor="?colorOnErrorContainer" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/DialogCard"
                app:cardBackgroundColor="?colorErrorContainer">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-8dp"
                    android:layout_marginTop="4dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_warning_24"
                    android:tint="?colorOnErrorContainer"
                    android:tintMode="src_in" />

                <TextView
                    style="@style/TerminalTutorialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:duplicateParentState="true"
                    android:text="@string/stealth_warning_detection"
                    android:textAppearance="?textAppearanceBodyMedium"
                    android:textColor="?colorOnErrorContainer"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/DialogCard">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-8dp"
                    android:layout_marginTop="4dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_help_outline_24dp"
                    android:tint="?colorOnSecondaryContainer"
                    android:tintMode="src_in" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TerminalTutorialText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stealth_info_reconfigure"
                        android:textAppearance="?textAppearanceBodyMedium"
                        android:textColor="?colorOnSecondaryContainer"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TerminalTutorialText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/stealth_info_rish"
                        android:textAppearance="?textAppearanceBodyMedium"
                        android:textColor="?colorOnSecondaryContainer" />

                    <TextView
                        style="@style/TerminalTutorialText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/stealth_info_intents"
                        android:textAppearance="?textAppearanceBodyMedium"
                        android:textColor="?colorOnSecondaryContainer" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/DialogCard">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-8dp"
                    android:layout_marginTop="4dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_help_outline_24dp"
                    android:tint="?colorOnSecondaryContainer"
                    android:tintMode="src_in" />

                <TextView
                    style="@style/TerminalTutorialText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:text="@string/stealth_info_update"
                    android:textAppearance="?textAppearanceBodyMedium"
                    android:textColor="?colorOnSecondaryContainer" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/packageNameContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurfaceContainerLow"
        android:paddingHorizontal="@dimen/margin_horizontal"
        android:paddingVertical="16dp"
        app:fitsSystemWindowsInsets="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/packageNameLayout"
            style="?textInputOutlinedDenseStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/stealth_package_name"
            app:fitsSystemWindowsInsets="start|end"
            app:endIconMode="clear_text"
            app:layout_constraintWidth_max="500dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/packageNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="?floatingActionButtonStyle"
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginBottom="-12dp"
        app:layout_constraintBottom_toTopOf="@id/packageNameContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_fitsSystemWindowsInsets="start|end" />

    <com.google.android.material.loadingindicator.LoadingIndicator
        style="@style/Widget.Material3.LoadingIndicator.Contained"
        android:id="@+id/loadingFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_horizontal"
        android:layout_marginBottom="-12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/packageNameContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_fitsSystemWindowsInsets="start|end" />

</androidx.constraintlayout.widget.ConstraintLayout>